examples/positive/L1/identifiers_pass.ob
MODULE Ident;

VAR r, value42, num365b: INTEGER;

END Ident.
