examples/negative/parse_errors/L1/identifiers_fail.ob
MODULE Ident;

VAR r, value42, 38value: INTEGER;

END Ident.
